OCaml 5.0 maintenance version
-----------------------------

### Runtime system:

- #11935: Load frametables of dynlink'd modules in batch
  (Stephen Dolan, review by David Allsopp and Guillaume Munch-Maccagnoni)

### Build system:

- #11590: Allow installing to a destination path containing spaces.
  (Élie Brami, review by Sébastien Hinderer and David Allsopp)

OCaml 5.0 (16 December 2022)
----------------------------

- #10831: Multicore OCaml
  (Enguerrand Decorne, Stephen Dolan, Tom Kelly, Sadiq Jaffer,
  Anil Madhavapeddy, Sudha Parimala, KC Sivaramakrishnan,
  Leo White, the Tarides multicore team,
  review by Florian Angeletti, Damien Doligez, Xavier Leroy,
  Guillaume Munch-Maccagnoni, Olivier Nicole, Nicolás Ojeda Bär,
  Gabriel Scherer, the OCaml core development team, and many
  other valued reviewers.)

### Language features:

### Runtime system:

- #11400: Runtime events counters fixes
  Fixes mismatch between OCaml and C APIs, removes events from 4.x that
  are not present in the 5.0 GC and adds some missing probes.
  (Sadiq Jaffer, review by Gabriel Scherer, Florian Angeletti)

- #11368: Runtime events buffer size OCAMLRUNPARAMS fix
  The runtime events buffer size can now be set via the 'e' OCAMLRUNPARAM.
  This is previously mistakenly enabled/disabled tracing instead.
  (Sadiq Jaffer, review by KC Sivaramakrishnan, David Allsopp, Damien Doligez)

- #11308: Add environment variable to preserve runtime_events after exit
  If the environment variable OCAML_RUNTIME_EVENTS_PRESERVE exists then the
  runtime will not remove the runtime events ring buffers at exit. This
  makes tracing very short running programs more reliable.
  (Sadiq Jaffer, review by KC Sivaramakrishnan)

- #10964: Ring-buffer based runtime tracing (runtime_events)
  Runtime_events is a very low overhead runtime tracing system designed for
  continuous monitoring of OCaml applications.
  (Sadiq Jaffer, review by Anil Madhavapeddy, Enguerrand Decorne,