@@ -22,19 +22,16 @@
 #include "caml/frame_descriptors.h"
 #include "caml/major_gc.h" /* for caml_major_cycles_completed */
 #include "caml/memory.h"
+#include "caml/fail.h"
 #include "caml/shared_heap.h"
 #include <stddef.h>
 
 /* Defined in code generated by ocamlopt */
 extern intnat * caml_frametable[];
 
-typedef struct link {
-  intnat* frametable;
-  struct link *next;
-} link;
-
-#define iter_list(list,lnk) \
-  for (lnk = list; lnk != NULL; lnk = lnk->next)
+/* Note: [cur] is bound by this macro */
+#define iter_list(list,cur) \
+  for (caml_frametable_list *cur = list; cur != NULL; cur = cur->next)
 
 static frame_descr * next_frame_descr(frame_descr * d) {
   unsigned char num_allocs = 0, *p;
@@ -68,52 +65,102 @@ static frame_descr * next_frame_descr(frame_descr * d) {
   }
 }
 
-static caml_frame_descrs build_frame_descriptors(link* frametables)
-{
-  intnat num_descr, tblsize, i, j, len;
-  intnat * tbl;
-  frame_descr * d;
-  uintnat h;
-  link *lnk;
-  caml_frame_descrs table;
-
-  /* Count the frame descriptors */
-  num_descr = 0;
-  iter_list(frametables,lnk) {
-    num_descr += *lnk->frametable;
+static intnat count_descriptors(caml_frametable_list *list) {
+  intnat num_descr = 0;
+  iter_list(list,cur) {
+    num_descr += *((intnat*) cur->frametable);
   }
+  return num_descr;
+}
 
-  /* The size of the hashtable is a power of 2 greater or equal to
-     2 times the number of descriptors */
-  tblsize = 4;
-  while (tblsize < 2 * num_descr) tblsize *= 2;
+static caml_frametable_list* frametables_list_tail(caml_frametable_list *list) {
+  caml_frametable_list *tail = NULL;
+  iter_list(list,cur) {
+    tail = cur;
+  }
+  return tail;
+}
 
-  /* Allocate the hash table */
-  table.descriptors = caml_stat_alloc(tblsize * sizeof(frame_descr*));
-  table.mask = tblsize - 1;
-  for (i = 0; i < tblsize; i++) table.descriptors[i] = NULL;
+static int capacity(caml_frame_descrs table) {
+  int capacity = table.mask + 1;
+  CAMLassert(capacity == 0 || Is_power_of_2(capacity));
+  return capacity;
+}
 
-  /* Fill the hash table */
-  iter_list(frametables,lnk) {
-    tbl = lnk->frametable;
-    len = *tbl;
-    d = (frame_descr *)(tbl + 1);
-    for (j = 0; j < len; j++) {
-      h = Hash_retaddr(d->retaddr, tblsize - 1);
-      while (table.descriptors[h] != NULL) {
-        h = (h+1) & table.mask;
+static void fill_hashtable(
+  caml_frame_descrs *table, caml_frametable_list *new_frametables)
+{
+  iter_list(new_frametables,cur) {
+    intnat * tbl = (intnat*) cur->frametable;
+    intnat len = *tbl;
+    frame_descr * d = (frame_descr *)(tbl + 1);
+    for (intnat j = 0; j < len; j++) {
+      uintnat h = Hash_retaddr(d->retaddr, table->mask);
+      while (table->descriptors[h] != NULL) {
+        h = (h+1) & table->mask;
       }
-      table.descriptors[h] = d;
-      if (j != len - 1) {
-        d = next_frame_descr(d);
-      }
+      table->descriptors[h] = d;
+      d = next_frame_descr(d);
     }
   }
+}
+
+static void add_frame_descriptors(
+  caml_frame_descrs *table,
+  caml_frametable_list *new_frametables)
+{
+  CAMLassert(new_frametables != NULL);
+
+  caml_frametable_list *tail = frametables_list_tail(new_frametables);
+  intnat increase = count_descriptors(new_frametables);
+  intnat tblsize = capacity(*table);
+
+  /* The size of the hashtable is a power of 2 that must remain
+     greater or equal to 2 times the number of descriptors. */
+
+  /* Reallocate the caml_frame_descriptor table if it is too small */
+  if(tblsize < (table->num_descr + increase) * 2) {
+
+    /* Merge both lists */
+    tail->next = table->frametables;
+    table->frametables = NULL;
+
+    /* [num_descr] can be less than [num_descr + increase] if frame
+       tables were unregistered */
+    intnat num_descr = count_descriptors(new_frametables);
+
+    tblsize = 4;
+    while (tblsize < 2 * num_descr) tblsize *= 2;
+
+    table->num_descr = num_descr;
+    table->mask = tblsize - 1;
+
+    if (table->descriptors != NULL) caml_stat_free(table->descriptors);
+    table->descriptors =
+      (frame_descr **) caml_stat_calloc_noexc(tblsize, sizeof(frame_descr *));
+    if (table->descriptors == NULL) caml_raise_out_of_memory();
+
+    fill_hashtable(table, new_frametables);
+  } else {
+    table->num_descr += increase;
+    fill_hashtable(table, new_frametables);
+    tail->next = table->frametables;
+  }
+
+  table->frametables = new_frametables;
+}
+
+static caml_frame_descrs build_frame_descriptors(
+  caml_frametable_list* frametables)
+{
+  caml_frame_descrs table = { 0, -1, NULL, NULL };
+
+  add_frame_descriptors(&table, frametables);
+
   return table;
 }
 
 static caml_plat_mutex descr_mutex;
-static link* frametables;
 
 /* Memory used by frametables is only freed once a GC cycle has
    completed, because other threads access the frametable at
@@ -132,17 +179,20 @@ struct frametable_version {
 /* Only modified when holding descr_mutex, but read without locking */
 static atomic_uintnat current_frametable = ATOMIC_UINTNAT_INIT(0);
 
-static link *cons(intnat *frametable, link *tl) {
-  link *lnk = caml_stat_alloc(sizeof(link));
-  lnk->frametable = frametable;
-  lnk->next = tl;
-  return lnk;
+static caml_frametable_list *cons(
+  intnat *frametable, caml_frametable_list *tl)
+{
+  caml_frametable_list *li = caml_stat_alloc(sizeof(caml_frametable_list));
+  li->frametable = frametable;
+  li->next = tl;
+  return li;
 }
 
 void caml_init_frame_descriptors(void)
 {
   int i;
   struct frametable_version *ft;
+  caml_frametable_list *frametables = NULL;
 
   caml_plat_mutex_init(&descr_mutex);
 
@@ -165,10 +215,20 @@ void caml_register_frametables(void **tables, int ntables)
 
   caml_plat_lock(&descr_mutex);
 
-  for (i = 0; i < ntables; i++)
-    frametables = cons((intnat*)tables[i], frametables);
   old = (struct frametable_version*)atomic_load_acq(&current_frametable);
   CAMLassert(old != NULL);
+
+  /* The frametable list of the new version is the frametable list of
+     the old version, plus the new frametables. */
+  caml_frametable_list *frametables = old->table.frametables;
+  for (i = 0; i < ntables; i++)
+    frametables = cons((intnat*)tables[i], frametables);
+
+  /* The hashtable is recomputed from scratch from the new
+     frametable list.
+
+     FIXME: repeating this linear reconstruction on each registration
+     leads to quadratic behavior. */
   ft = caml_stat_alloc(sizeof(*ft));
   ft->table = build_frame_descriptors(frametables);
   atomic_store_rel(&ft->free_prev_after_cycle, caml_major_cycles_completed);
@@ -179,7 +239,7 @@ void caml_register_frametables(void **tables, int ntables)
      heap memory being stale frame tables */
   caml_adjust_gc_speed(
      /* Size of the table just allocated */
-     (sizeof(*ft) + sizeof(ft->table.descriptors[0]) * (ft->table.mask + 1)),
+     (sizeof(*ft) + sizeof(ft->table.descriptors[0]) * capacity(ft->table)),
      /* 1/4 of the heap size */
      caml_heap_size(Caml_state->shared_heap) / 4
   );
